[package]
name = "freemason"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
bytes = "1.5.0"
futures = "0.3.29"
futures-util = "0.3.29"
hex = "0.4.3"
polodb_core = "4.4.0"
rand = "0.8.5"
ring = "0.17.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
sha3 = "0.10.8"
warp = "0.3.6"
